--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 
+<iframe width="0" height="0" src="https://www.youtube.com/embed/v315d4f54oM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+
 <canvas id="canvas" width="400" height="400"
 style="background-color:#353">
 </canvas>
