--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
@@ -120,9 +120,9 @@
           <div class="subheading mb-5">Columbia University · New York, NY 10027 · (206) 915-1164 ·
             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
           </div>
-          <p class="mb-5">
+          <p class="mb-5 text-primary">
 
-I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia University. I am interested in a variety of stuff ranging from dynamical systems, Bayesian statistics, machine learning, and their applications to genome sciences and biological systems. I graduated from the University of Washington (UW) in the Computational Neuroscience Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology. I still maintains close collaborations and affliation with UW Department of Applied Mathematics. 
+I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/">the Center for Theoretical Neuroscience</a> in Columbia University. I am interested in a variety of stuff ranging from dynamical systems, Bayesian statistics, machine learning, and their applications to genome sciences and biological systems. I graduated from the University of Washington (UW) in the Computational Neuroscience Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology. I still maintains close collaborations and affliation with <a href="https://amath.washington.edu/people/baihan-lin"> UW Department of Applied Mathematics </a>.
 
 </p>
 
@@ -130,7 +130,7 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
           <div class="subheading mb-3">Recent news</div>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-coffee"></i>
               website under construction</li>
           </ul>
         </div>
@@ -144,16 +144,38 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
         <div class="my-auto">
           <h2 class="mb-5">Research</h2>
 
-<!--          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+
+<p class="mb-5 text-primary">
+
+I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning neuroscience, mathematical biology, genome sciences, machine learning, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+
+More details to come~
+
+</p>
+
+<!-- 
+         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0"> PhD student </h3>
+              <div class="subheading mb-3">Columbia University, New York, NY</div>
+              <p>ongoing.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">Sep 2017 - Present</span>
             </div>
           </div>
+
+                   <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"> PhD Research Intern </h3>
+              <div class="subheading mb-3">IBM Research, Yorktown Heights, NY</div>
+              <p>ongoing.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Sep 2017 - Present</span>
+            </div>
+          </div>
+
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -193,6 +215,35 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
 
       </section>
 
+ <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+        <div class="my-auto">
+          <h2 class="mb-5">Publications</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-conference"></i>
+              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i> <b class="text-primary"> arXiv 2018 </b> </li>
+                   <li>
+              <i class="fa-li fa fa-conference"></i>
+               Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i> <b class="text-primary"> RECOMB/ISCB Conference on Regulatory & Systems Genomics 2017 </b> </li>
+             <li>
+              <i class="fa-li fa fa-journal"></i>
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> <b class="text-primary"> PLoS One 2017 </b> </li></li>
+            <li>
+              <i class="fa-li fa fa-journal"></i>
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i> <b class="text-primary">  Journal of Infection 2017 </b> </li></li>
+             <li>
+              <i class="fa-li fa fa-journal"></i>
+                Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i> <b class="text-primary"> Frontiers in cellular and infection microbiology 2017 </b> </li></li>
+             <li>
+               <i class="fa-li fa fa-conference"></i>
+               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i> <b class="text-primary"> NeuroFutures 2016 </b> </li></li>
+            <li>
+               <i class="fa-li fa fa-journal"></i>
+               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i> <b class="text-primary"> Scientific Reports 2015 </b> </li></li>
+          </ul>
+        </div>
+      </section>
+
    <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
@@ -223,8 +274,9 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
 
         </div>
       </section>
+-->
 
-
+   <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
@@ -284,7 +336,8 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
         </div>
       </section>
 
-
+-->
+  <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
@@ -292,7 +345,8 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
         </div>
       </section>
-
+ -->
+<!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Fellowships &amp; Awards</h2>
@@ -327,6 +381,7 @@ I am a Ph.D. student at the Center for Theoretical Neuroscience in Columbia Univ
           </ul>
         </div>
       </section>
+      
     -->
 
     </div>
