--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ More details to come~
 
       </section>
 
- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+ <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
