--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <p class="mb-5 text-primary">
 
-I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/">the Center for Theoretical Neuroscience</a> in Columbia University. I am interested in a variety of stuff ranging from dynamical systems, Bayesian statistics, machine learning, and their applications to genome sciences and biological systems. I graduated from the University of Washington (UW) in the Computational Neuroscience Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology. I still maintains close collaborations and affliation with <a href="https://amath.washington.edu/people/baihan-lin"> UW Department of Applied Mathematics </a>.
+I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>the Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University. I am interested in a variety of stuff ranging from geometric topology, dynamical systems, Bayesian statistics, machine learning, and their applications to genome sciences and biological systems. I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintains close collaborations and affliation with <a href="https://amath.washington.edu/people/baihan-lin"> UW Department of Applied Mathematics </a>. 
 
 </p>
 
@@ -147,7 +147,7 @@ I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/">t
 
 <p class="mb-5 text-primary">
 
-I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning neuroscience, mathematical biology, genome sciences, machine learning, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computatational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
 
 More details to come~
 
