--- a/index.html
+++ b/index.html
@@ -121,10 +121,8 @@
             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
           </div>
           <p class="mb-5 text-primary">
-
-I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>the Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University. I am interested in a variety of stuff ranging from geometric topology, dynamical systems, Bayesian statistics, machine learning, and their applications to genome sciences and biological systems. I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintains close collaborations and affliation with <a href="https://amath.washington.edu/people/baihan-lin"> UW Department of Applied Mathematics </a>. 
-
-</p>
+            I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliation with <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
+          </p>
 
 
           <div class="subheading mb-3">Recent news</div>
@@ -144,14 +142,58 @@ I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><
         <div class="my-auto">
           <h2 class="mb-5">Research</h2>
 
+          <p class="mb-5 text-primary">
 
-<p class="mb-5 text-primary">
+            I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computatational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+            More details to come~
+          </p>
 
-I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computatational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
-
-More details to come~
-
-</p>
+          <ul class="list-inline list-icons">
+            <li class="list-inline-item">
+              <a href="https://zuckermaninstitute.columbia.edu/">
+                <img src="img/zi-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="https://systemsbiology.columbia.edu/">
+                <img src="img/dsb-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="https://psoc.c2b2.columbia.edu/">
+                <img src="img/psoc-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="https://systemsbiology.columbia.edu/center-for-computational-biology-and-bioinformatics-c2b2">
+                <img src="img/c2b2-logo.png" alt="" style="width:150px;height:40px;"> </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="http://www.research.ibm.com/">
+                <img src="img/ibm-logo.png" alt="" style="width:150px;height:25px;"> </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.microsoft.com/en-us/research/">
+                <img src="img/msr-logo.jpg" alt="" style="width:150px;height:40px;"> </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="http://www.genomics.cn/en/navigation/show_navigation?nid=253">
+                <img src="img/bgi-logo.png" alt="" style="width:150px;height:40px;"> </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="http://www.ipd.uw.edu/">
+                <img src="img/ipd-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="https://ubicomplab.cs.washington.edu/">
+                <img src="img/ubicomp-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="https://amath.washington.edu/">
+                <img src="img/uwa-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+            <li class="list-inline-item">
+              <a href="http://compneuro.washington.edu/wordpress/">
+                <img src="img/cnc-logo.png" alt="" style="width:150px;height:40px;"> </a> 
+            </li>
+          </ul>
 
 <!-- 
          <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -276,7 +318,7 @@ More details to come~
       </section>
 -->
 
-   <!-- 
+    <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
@@ -284,7 +326,10 @@ More details to come~
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
+              <img src="img/profile500.jpg" alt="" style="width:48px;height:48px;"> 
+            </li>
+            <li class="list-inline-item">
+              <img src="img/profile500.jpg" alt="" style="width:48px;height:48px;"> 
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-css3"></i>
@@ -335,8 +380,8 @@ More details to come~
           </ul>
         </div>
       </section>
+ -->
 
--->
   <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
