--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
           <p class="mb-5 text-primary">
 
-            I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computatational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+            I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
             More details to come~
           </p>
 
