--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-coffee"></i>
-              website under construction</li>
+              website still under construction</li>
           </ul>
         </div>
 
@@ -381,6 +381,15 @@
         </div>
       </section>
  -->
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Interests</h2>
+          <p>I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle with all kinds of natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is not gonna happen here). Beyond the footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across US from East to West some time soon.</p>
+          <p class="mb-0">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a modern sofa. </p>
+          <p class="mb-0">Other than these, I play flute and am learning guitar, perhaps Jazz-style.  </p>
+
+        </div>
+      </section>
 
   <!-- 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
