--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                     <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          </li>
        <!--
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#fellowships">Fellowships</a>
@@ -384,9 +384,11 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle with all kinds of natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is not gonna happen here). Beyond the footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across US from East to West some time soon.</p>
-          <p class="mb-0">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a modern sofa. </p>
-          <p class="mb-0">Other than these, I play flute and am learning guitar, perhaps Jazz-style.  </p>
+          <p class="mb-5 text-primary">I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle Washington with all the natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time soon.</p>
+
+          <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a modern sofa. </p>
+
+          <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and my cat can still bear it). </p>
 
         </div>
       </section>
