--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
           </div>
           <p class="mb-5 text-primary">
-            I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliation with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
+            I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences.  </p>
+
+          <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliation with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
           </p>
 
 
@@ -144,7 +146,9 @@
 
           <p class="mb-5 text-primary">
 
-            I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+            I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
+
+          <p class="mb-5 text-primary">
             More details to come~
           </p>
 
