--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                 </span>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/doerlbh/">
+                <span class="fa-stack fa-md">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
               </ul>
  </ul>
       </div>
