--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
           <h2 class="mb-5">Interests</h2>
           <p class="mb-5 text-primary">I am always curious about the world and I like exploring new things. Although New York Manhattan is a much more crowded and monochromatic place than the scenic Seattle Washington with all the natural beauty, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time soon.</p>
 
-          <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a>. </p>
+          <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). </p>
 
           <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and my cat can still bear it). </p>
 
