--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a>
           </div>
           <p class="mb-5 text-primary">
-            I am a Ph.D. student at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences.  </p>
+            I am a Ph.D. candidate at <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> in Columbia University, co-advised by <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Nikolaus Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>. I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences.  </p>
 
-          <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliation with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
+          <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
           </p>
 
 
@@ -275,6 +275,9 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-conference"></i>
+              <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i> <b class="text-primary"> arXiv 2018 </b> </li>
+                   <li>
+                    <i class="fa-li fa fa-conference"></i>
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i> <b class="text-primary"> arXiv 2018 </b> </li>
                    <li>
               <i class="fa-li fa fa-conference"></i>
@@ -400,7 +403,7 @@
 
           <p class="mb-5 text-primary">Despite doing many theoretical research, I like making tangible things: woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). </p>
 
-          <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and my cat can still bear it). </p>
+          <p class="mb-5 text-primary">Other than these life bits, I play flute and am currently learning guitar, the Jazz-style, (at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it). </p>
 
         </div>
       </section>
