--- a/index.html
+++ b/index.html
@@ -275,12 +275,18 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-conference"></i>
+              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> <b class="text-primary"> arXiv 2019 </b> </li>
+                   <li>            <li>
+              <i class="fa-li fa fa-conference"></i>
               <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i> <b class="text-primary"> arXiv 2018 </b> </li>
                    <li>
                     <i class="fa-li fa fa-conference"></i>
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i> <b class="text-primary"> arXiv 2018 </b> </li>
                    <li>
-              <i class="fa-li fa fa-conference"></i>
+                   <li>
+                    <i class="fa-li fa fa-conference"></i>
+              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i> <b class="text-primary"> IEEE ICDM 2018 Workshop</b> </li>
+                   <li>              <i class="fa-li fa fa-conference"></i>
                Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i> <b class="text-primary"> RECOMB/ISCB Conference on Regulatory & Systems Genomics 2017 </b> </li>
              <li>
               <i class="fa-li fa fa-journal"></i>
@@ -293,7 +299,7 @@
                 Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i> <b class="text-primary"> Frontiers in cellular and infection microbiology 2017 </b> </li></li>
              <li>
                <i class="fa-li fa fa-conference"></i>
-               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i> <b class="text-primary"> NeuroFutures 2016 </b> </li></li>
+               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i> <b class="text-primary"> NeuroFutures Conference 2016 </b> </li></li>
             <li>
                <i class="fa-li fa fa-journal"></i>
                Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i> <b class="text-primary"> Scientific Reports 2015 </b> </li></li>
