--- a/index.html
+++ b/index.html
@@ -273,46 +273,56 @@
         <div class="my-auto">
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
+          	
             <li>
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary"> arXiv 2019 </b>
-              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li>
-                   <li>            <li>
+              <b class="text-primary"> arXiv 2019. &nbsp; </b><br />
+              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
+
+                   <li>        
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary"> arXiv 2018 </b>
-              <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li>
+              <b class="text-primary"> arXiv 2018. &nbsp; </b><br />
+              <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li><br />
+
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary"> arXiv 2018 </b>
-              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li>
-                   <li>
+                    <b class="text-primary"> arXiv 2018. &nbsp; </b><br />
+              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li><br />
+
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary"> IEEE ICDM 2018 Workshop</b>
-              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li>
+                    <b class="text-primary"> IEEE ICDM 2018 Workshop. &nbsp; </b><br />
+              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
+
                    <li><i class="fa-li fa fa-conference"></i>
-                   	<b class="text-primary"> RECOMB/ISCB Conference on Regulatory & Systems Genomics 2017 </b>
-               Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li>
+                   	<b class="text-primary"> RECOMB/ISCB Conference on Regulatory & Systems Genomics 2017. &nbsp; </b><br />
+               Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li><br />
+
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary"> PLoS One 2017 </b> 
-               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li>
+              <b class="text-primary"> PLoS One 2017. &nbsp; </b> <br />
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li><br />
+
             <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary">  Journal of Infection 2017 </b>
-               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li>
+              <b class="text-primary">  Journal of Infection 2017. &nbsp; </b><br />
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li><br />
+
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary"> Frontiers in cellular and infection microbiology 2017 </b>
-                Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li>
+              <b class="text-primary"> Frontiers in cellular and infection microbiology 2017. &nbsp; </b><br />
+                Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li><br />
+
              <li>
                <i class="fa-li fa fa-conference"></i>
-               <b class="text-primary"> NeuroFutures Conference 2016 </b>
-               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li>
+               <b class="text-primary"> NeuroFutures Conference 2016. &nbsp; </b><br />
+               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li><br />
+
             <li>
                <i class="fa-li fa fa-journal"></i>
-               <b class="text-primary"> Scientific Reports 2015 </b>
-               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li>
+               <b class="text-primary"> Scientific Reports 2015. &nbsp; </b><br />
+               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
+
           </ul>
         </div>
       </section>
