--- a/index.html
+++ b/index.html
@@ -273,7 +273,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
-          	
+
+            <li>
+              <i class="fa-li fa fa-conference"></i>
+              <b class="text-primary"> IJCAI 2019. &nbsp; </b><br />
+              <b> Baihan Lin </b>, Djallel Bouneffouf, Guillermo Cecchi. <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
+
             <li>
               <i class="fa-li fa fa-conference"></i>
               <b class="text-primary"> arXiv 2019. &nbsp; </b><br />
