--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
             I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
 
           <p class="mb-5 text-primary">
-            More details to come~
+            More details to come~ <a href="#p1">[1]<a>
           </p>
 
+<!--
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
               <a href="https://zuckermaninstitute.columbia.edu/">
@@ -206,8 +207,7 @@
                 <img src="img/cnc-logo.png" alt="" style="width:150px;height:40px;"> </a> 
             </li>
           </ul>
-
-<!-- 
+ 
          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"> PhD student </h3>
@@ -325,7 +325,7 @@
 
             <li>
                <i class="fa-li fa fa-journal"></i>
-               <b class="text-primary"> Scientific Reports 2015. &nbsp; </b><br />
+               <b class="text-primary" id="p1"> [1] Scientific Reports 2015. &nbsp; </b><br />
                Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
 
           </ul>
