--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
                 <img src="img/cnc-logo.png" alt="" style="width:150px;height:40px;"> </a> 
             </li>
           </ul>
- 
+ -->
+
          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          
             <div class="resume-content mr-auto">
               <h3 class="mb-0"> PhD student </h3>
               <div class="subheading mb-3">Columbia University, New York, NY</div>
@@ -230,41 +232,6 @@
             </div>
           </div>
 
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
--->
-
         </div>
 
       </section>
@@ -276,56 +243,56 @@
 
             <li>
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary"> IJCAI 2019. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Djallel Bouneffouf, Guillermo Cecchi. <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
+              <b class="text-primary" id="p11"> [11] arXiv 2019. &nbsp; </b><br />
+              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
 
             <li>
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary"> arXiv 2019. &nbsp; </b><br />
-              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
+              <b class="text-primary" id="p10"> [10] IJCAI 2019. &nbsp; </b><br />
+              <b> Baihan Lin </b>, Djallel Bouneffouf, Guillermo Cecchi. <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
 
                    <li>        
               <i class="fa-li fa fa-conference"></i>
-              <b class="text-primary"> arXiv 2018. &nbsp; </b><br />
+              <b class="text-primary" id="p9"> [9] 2018 arXiv. &nbsp; </b><br />
               <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary"> arXiv 2018. &nbsp; </b><br />
+                    <b class="text-primary" id="p8"> [8] 2018 arXiv. &nbsp; </b><br />
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    <b class="text-primary"> IEEE ICDM 2018 Workshop. &nbsp; </b><br />
+                    <b class="text-primary" id="p7"> [7] 2018 IEEE ICDM Workshop. &nbsp; </b><br />
               <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
 
                    <li><i class="fa-li fa fa-conference"></i>
-                   	<b class="text-primary"> RECOMB/ISCB Conference on Regulatory & Systems Genomics 2017. &nbsp; </b><br />
+                   	<b class="text-primary" id="p6"> [6] 2017 RECOMB/ISCB Conference on Regulatory & Systems Genomics. &nbsp; </b><br />
                Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary"> PLoS One 2017. &nbsp; </b> <br />
+              <b class="text-primary" id="p5"> [5] 2017 PLoS One. &nbsp; </b> <br />
                Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary">  Journal of Infection 2017. &nbsp; </b><br />
+              <b class="text-primary" id="p4"> [4] 2017 Journal of Infection. &nbsp; </b><br />
                Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              <b class="text-primary"> Frontiers in cellular and infection microbiology 2017. &nbsp; </b><br />
+              <b class="text-primary"  id="p3"> [3] 2017 Frontiers in cellular and infection microbiology. &nbsp; </b><br />
                 Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li><br />
 
              <li>
                <i class="fa-li fa fa-conference"></i>
-               <b class="text-primary"> NeuroFutures Conference 2016. &nbsp; </b><br />
+               <b class="text-primary" id="p2"> [2] 2016 NeuroFutures Conference. &nbsp; </b><br />
                <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li><br />
 
             <li>
                <i class="fa-li fa fa-journal"></i>
-               <b class="text-primary" id="p1"> [1] Scientific Reports 2015. &nbsp; </b><br />
+               <b class="text-primary" id="p1"> [1] 2015 Scientific Reports. &nbsp; </b><br />
                Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
 
           </ul>
