--- a/index.html
+++ b/index.html
@@ -157,20 +157,20 @@
             I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, genome sciences, protein design, artificial intelligence, computational psychiatry and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research.  </p>
 
           <p class="mb-5 text-primary">
-            <table align="left">
+            <table align="left" class="mb-5 text-primary">
               <tr><th>Start</th><th>End</th><th>Institute</th><th>Team</th><th>Publication</th></tr>
-              <tr><td>2017</td><td>Present</td><td>IBM Research</td><td>Computational Psychiatry Group & AI Foundation Group</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td></tr>
-              <tr><td>2017</td><td>2017</td><td>Microsoft Research</td><td>EPIC (Extended Perception, Interaction, & Cognition) Group</td><td><a href="#p14">[14]<a></td></tr>
-              <tr><td>2018</td><td>Present</td><td>Columbia University</td><td> Visual Inference & Computational Neuroscience Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td></tr>
-              <tr><td>2018</td><td>Present</td><td> </td><td> Center for Theoretical Neuroscience, Qian Lab </td><td><a href="#p11">[11]<a></td></tr>
-              <tr><td>2018</td><td>2018</td><td> </td><td> Center for Topology of Cancer Evolution and Heterogeneity, Rabadan Lab </td><td><a href="#p15">[15]<a></td></tr>
-              <tr><td>2017</td><td>2017</td><td> </td><td> Computational Biology Group of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td></tr>
-              <tr><td>2017</td><td>2017</td><td>University of Washington</td><td> UbiComp Lab of CSE and EE, Patel Lab </td><td></td></tr>
-              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design of BioE, Baker Group </td><td><a href="#p12">[12]<a></td></tr>
-              <tr><td>2016</td><td>2016</td><td></td><td> Mathematical Biology and Biophysical Chemistry Lab of AMath, Qian Lab </td><td></td></tr>
-              <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Lab of Psych, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p13">[13]<a></td></tr>
-              <tr><td>2014</td><td>2017</td><td>Beijing Institute of Microbiology & Epidemiology </td><td> State Key Lab of Pathogen and Biosecurity, Teng Lab 􏰆􏰏􏰐􏰏</td><td><a href="#p1">[1]<a><a href="#p3">[3]<a><a href="#p4">[4]<a><a href="#p5">[5]<a></td></tr>
-              <tr><td>2013</td><td>2013</td><td>BGI Research </td><td> Personalized Genome Group, Human Health Application Lab  </td><td></td></tr>
+              <tr><td>2017</td><td>now</td><td>IBM Research</td><td>CompNeuro & AI Foundation Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td>Microsoft Research</td><td>EPIC Group</td><td><a href="#p14">[14]<a></td></tr>
+              <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td></tr>
+              <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p11">[11]<a></td></tr>
+              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biology, Rabadan Lab </td><td><a href="#p15">[15]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td> </td><td> Dept. of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td></tr>
+              <tr><td>2017</td><td>2017</td><td>University of Washington</td><td> UbiComp Lab of CSE & EE, Patel Lab </td><td></td></tr>
+              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design, Baker Group </td><td><a href="#p12">[12]<a></td></tr>
+              <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td></tr>
+              <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p13">[13]<a></td></tr>
+              <tr><td>2014</td><td>2017</td><td>BIME </td><td> State Key Lab of Pathogen & Biosecurity </td><td><a href="#p1">[1]<a><a href="#p3">[3]<a><a href="#p4">[4]<a><a href="#p5">[5]<a></td></tr>
+              <tr><td>2013</td><td>2013</td><td>BGI Research </td><td> Personalized Genome Group  </td><td></td></tr>
             </table>
           </p>
 
