--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
           <p class="mb-5 text-primary">
             <table align="left" class="mb-5 text-primary">
-              <tr><th>Start</th><th>End</th><th>Institute</th><th>Team</th><th>Publication</th></tr>
+              <tr><th>Start</th><th>End</th><th>Institute</th><th>Team</th><th>Publications</th></tr>
               <tr><td>2017</td><td>now</td><td>IBM Research</td><td>CompNeuro & AI Foundation Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td></tr>
               <tr><td>2017</td><td>2017</td><td>Microsoft Research</td><td>EPIC Group</td><td><a href="#p14">[14]<a></td></tr>
               <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td></tr>
