--- a/index.html
+++ b/index.html
@@ -158,25 +158,22 @@
 
           <p class="mb-5 text-primary">
             <table align="left" class="mb-5 text-primary">
-              <tr><th>Start</th><th>End</th><th>Institute</th><th>Team</th><th>Publications</th></tr>
-              <tr><td>2017</td><td>now</td><td>IBM Research</td><td>CompNeuro & AI Foundation Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td></tr>
-              <tr><td>2017</td><td>2017</td><td>Microsoft Research</td><td>EPIC Group</td><td><a href="#p14">[14]<a></td></tr>
+              <tr><th>From</th><th>Till</th><th>Institute</th><th>Team</th><th>Publications</th><th>Areas</th></tr>
+              <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundation Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td><td><span style="color: blue;">NS</span><span style="color: red;">ML</span><span style="color: gold;">CV</span></td></tr>
+              <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p14">[14]<a></td></tr>
               <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td></tr>
               <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p11">[11]<a></td></tr>
-              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biology, Rabadan Lab </td><td><a href="#p15">[15]<a></td></tr>
+              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p15">[15]<a></td></tr>
               <tr><td>2017</td><td>2017</td><td> </td><td> Dept. of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td></tr>
               <tr><td>2017</td><td>2017</td><td>University of Washington</td><td> UbiComp Lab of CSE & EE, Patel Lab </td><td></td></tr>
-              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design, Baker Group </td><td><a href="#p12">[12]<a></td></tr>
+              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design, Baker Lab </td><td><a href="#p12">[12]<a></td></tr>
               <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td></tr>
               <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p13">[13]<a></td></tr>
               <tr><td>2014</td><td>2017</td><td>BIME </td><td> State Key Lab of Pathogen & Biosecurity </td><td><a href="#p1">[1]<a><a href="#p3">[3]<a><a href="#p4">[4]<a><a href="#p5">[5]<a></td></tr>
-              <tr><td>2013</td><td>2013</td><td>BGI Research </td><td> Personalized Genome Group  </td><td></td></tr>
+              <tr><td>2013</td><td>2013</td><td>BGI Research HQ </td><td> Personalized Genome Group  </td><td></td></tr>
             </table>
           </p>
 
-          <p class="mb-5 text-primary">
-            More details to come~ 
-          </p>
 <!-- 
          <div class="resume-item d-flex flex-column flex-md-row mb-5">
 
