--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
           <p class="mb-5 text-primary">I graduated from the University of Washington, Seattle (UW), in the NIH-funded Computational Neuroscience Training Program with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>. 
           </p>
 
-
+<!-- 
           <div class="subheading mb-3">Recent news</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-coffee"></i>
               website still under construction</li>
           </ul>
-        </div>
+        </div> -->
 
         
         </div>
