--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
               <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p11">[11]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
-              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p15">[15]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
+              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p13">[13]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
 
               <tr><td>2017</td><td>2017</td><td> </td><td> Dept. of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td></tr>
 
@@ -185,7 +185,7 @@
 
               <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td><td><span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td></tr>
 
-              <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p13">[13]<a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
+              <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p15">[15]<a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
 
               <tr><td>2014</td><td>2017</td><td>BIME </td><td> State Key Lab of Pathogen & Biosecurity </td><td><a href="#p1">[1]<a><a href="#p3">[3]<a><a href="#p4">[4]<a><a href="#p5">[5]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td></tr>
 
@@ -277,23 +277,23 @@
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              [15] &nbsp;  <b class="text-primary" id="p15"> under review. &nbsp; </b> <br />
-               <b> Baihan Lin </b>. <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
+              [15]&nbsp;  <b class="text-primary" id="p15"> under review. &nbsp; </b> <br />
+               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b> Baihan Lin </b>, and Jaime Olavarria. <u><i> <a href="">Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-journal"></i>
-              [14] &nbsp;  <b class="text-primary" id="p14"> under review. &nbsp; </b> <br />
+              [14]&nbsp;  <b class="text-primary" id="p14"> under review. &nbsp; </b> <br />
                Mar Gonzalez-Franco, <b> Baihan Lin </b>, Christopher Berger, and Jaron Lanier. <u><i> <a href="">Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </a> </u></i> </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              [13] &nbsp;  <b class="text-primary" id="p13"> under review. &nbsp; </b> <br />
-               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b> Baihan Lin </b>, and Jaime Olavarria. <u><i> <a href="">Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </a> </u></i> </li></li><br />
+              [13]&nbsp;  <b class="text-primary" id="p13"> 2019 ISMB. &nbsp; </b> <br />
+               <b> Baihan Lin </b>. <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              [12] &nbsp;  <b class="text-primary" id="p12"> 2019 Journal of the American Chemical Society. &nbsp; </b> <br />
-               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b> Baihan Lin </b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <u><i> <a href="">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
+              [12]&nbsp;  <b class="text-primary" id="p12"> 2019 Journal of the American Chemical Society. &nbsp; </b> <br />
+               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b> Baihan Lin </b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <u><i> <a href="https://pubs.acs.org/doi/10.1021/jacs.9b01978">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-conference"></i>
